--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.6.0",
-    "immer": "^8.0.1",
+    "immer": "^9.0.19",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1"
